# ai-project-qna-system-using-yt-books

./: .env.example  .gitignore  .tmp_graph_smoke.db-journal  .tmp_ingest_probe.db-journal  .tmp_review_latency.db-journal  README.md  SYSTEM_DETAILED_WALKTHROUGH.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  llm_client.py  main.py  runtime_logging.py
app/agents/: __init__.py  book_rag_agent.py  judge_agent.py  synthesis_agent.py  youtube_agent.py
app/db/: __init__.py  models.py  schema.sql  session.py
app/evals/: __init__.py  dataset.py  graders.py  run_evals.py  test_questions.yaml
app/graph/: __init__.py  nodes.py  prompts.py  state.py  supervisor_graph.py
app/mcp_servers/: __init__.py  library_server.py  youtube_server.py
app/rag/: __init__.py  chunking.py  citations.py  embeddings.py  ingest_books.py  retriever.py
app/youtube/: __init__.py  ranking.py  search.py  transcripts.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_graph_smoke.py  test_judge_agent.py  test_supervisor_routing.py
